[package]
name = "catr"
version = "0.1.0"
authors = ["Frank Pereny"]
edition = "2021"
description = "A fully functional clone of the GNU concat tool built completely in Rust."
readme = "README.md"
license = "LICENSE"
repository = "https://github.com/fjpereny/rust-cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*